--- a/css/styles.less
+++ b/css/styles.less
@@ -1,12 +1,25 @@
 @midWidht: 116.9rem;
-@max-container: 14.40rem;
+@max-container: 144rem;
 
 @bg: #262525;
 @gold: #F2C930;
 @orange: #FC6B3F;
 @gray: rgba(#151439, .4);
 @blue: #3E467F;
+@azure: #84F2D6;
+@bk: #18191F;
 
+.mobile-sized(@size, @content) {
+  @media (max-width: @size) {
+    @content();
+  }
+}
+
+.mobile (@content) {
+  @media (max-width: 768px) {
+    @content();
+  }
+}
 
 .mobile-padding {
   padding-left: 1rem;
@@ -21,6 +34,10 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
+  .mobile({
+    font-size: 55%;
+  });
 }
 
 body {
@@ -28,12 +45,13 @@ body {
   color: @bg;
 }
 
-
 .header_wrapper {
   background-color: @bg;
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+
+//header
 header {
   color: #fff;
   font-size: 1.6rem;
@@ -43,23 +61,34 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   nav {
     ul {
       list-style: none;
       display: flex;
       justify-content: space-between;
       width: 34.1rem;
+
       li {
         a {
           color: #fff;
           text-decoration: none;
+
           i {
             background-color: transparent;
           }
         }
       }
     }
+
+    .hamburger {
+      font-size: 2rem;
+      color: #fff;
+      text-decoration: none;
+      display: none;
+    }
   }
+
   .btn {
     background-color: @orange;
     display: block;
@@ -71,35 +100,102 @@ header {
     padding: .4rem 0;
     border-radius: 2.5rem;
   }
+
+  .mobile-sized(1202px, {
+    .mobile-padding();
+  });
+  .mobile({
+    nav {
+      order: 3;
+
+      ul {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        overflow-y: auto;
+        display: block;
+        background-color: @bg;
+        width: 20rem;
+        padding-top: 4rem;
+        transform: translateX(-110%);
+        transition: transform .25s ease;
+        z-index: 5;
+
+        li {
+          padding: 2rem;
+        }
+
+        .social {
+          display: inline-block;
+          font-size: 3rem;
+        }
+      }
+
+      ul.active {
+        transform: translateX(0);
+      }
+
+      .hamburger {
+        display: block;
+        width: 2rem;
+        overflow: hidden;
+      }
+    }
+  })
 }
 
-
+//index
 .index-screen1 {
   background-color: @bg;
   padding-top: 7rem;
   padding-bottom: 10.4rem;
+  .mobile({
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  });
+
   .content {
     max-width: @midWidht;
     margin: 0 auto;
+
+    img {
+      cursor: pointer;
+    }
+
+    .mobile-sized(1187px, {
+      .mobile-padding();
+    });
+
     .visual {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      .mobile-sized(951px, {
+        flex-wrap: wrap;
+      });
+
       .text {
         max-width: 81rem;
+
         h1 {
           color: @gold;
           font-size: 4.2rem;
           line-height: 5.2rem;
           padding-bottom: 3.2rem;
         }
+
         p {
           font-size: 2.2rem;
           line-height: 3.2rem;
           padding-bottom: 7.8rem;
           color: #fff;
+          .mobile-sized(951px, {
+            padding-bottom: 3rem;
+          });
         }
       }
+
       .btn {
         color: #ffffff;
         background-color: @orange;
@@ -111,6 +207,9 @@ header {
         width: 20.6rem;
         text-align: center;
         text-decoration: none;
+        .mobile-sized(951px, {
+          margin-bottom: 3rem;
+        });
       }
     }
   }
@@ -121,19 +220,28 @@ header {
   padding-bottom: 10.2rem;
   max-width: @midWidht;
   margin: 0 auto;
+  .mobile({
+    .mobile-padding();
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  });
+
   .icons {
     display: flex;
     justify-content: space-between;
     max-width: 23.1rem;
     margin: 0 auto;
     margin-bottom: 4.8rem;
+
     i {
       font-size: 2rem;
+
       &:nth-child(2) {
         color: #E93A7D;
       }
     }
   }
+
   h2 {
     text-align: center;
     font-size: 4.2rem;
@@ -141,6 +249,7 @@ header {
     font-weight: 900;
     padding-bottom: 3.4rem;
   }
+
   p {
     max-width: 76.8rem;
     text-align: center;
@@ -154,6 +263,10 @@ header {
 .index-feature {
   max-width: @midWidht;
   margin: 0 auto;
+  .mobile-sized(1181px, {
+    .mobile-padding();
+  });
+
   h2 {
     text-align: center;
     font-size: 4.2rem;
@@ -161,43 +274,60 @@ header {
     font-weight: 600;
     margin-bottom: 4.8rem;
   }
+
   .feature-parent {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    .mobile-sized(1181px, {
+      justify-content: space-around;
+    });
+
     .feature-item {
       max-width: 36.9rem;
       margin-bottom: 8.1rem;
+      .mobile({
+        width: 45%;
+      });
+
       &:nth-child(5) {
         p {
           text-align: center;
         }
       }
-      img  {
+
+      img {
         width: 100%;
         height: auto;
         display: block;
       }
+
       h3 {
         font-weight: 600;
         font-size: 2.4rem;
-        line-height: 1.4rem;
+        line-height: 150%;
         margin-bottom: 4.6rem;
         margin-top: 1.8rem;
         text-align: center;
       }
+
       p {
         font-size: 1.6rem;
         line-height: 2.6rem;
         color: @gray;
       }
+
       h4 {
         padding-top: 4rem;
         font-size: 2.4rem;
         line-height: 3.2rem;
         font-weight: 600;
         text-align: center;
+        .mobile({
+          padding-top: 0;
+        });
       }
+
       a.demo {
         display: block;
         width: 20.1rem;
@@ -210,28 +340,611 @@ header {
         color: #fff;
         text-decoration: none;
         margin: 7.4rem auto 0;
+        .mobile({
+          width: 15rem;
+        })
       }
     }
   }
 }
 
+.index-swiper {
+  max-width: @midWidht;
+  margin: 0 auto;
+
+  h2 {
+    text-align: center;
+    font-size: 4.2rem;
+    font-weight: 700;
+    line-height: 5.2rem;
+    padding-bottom: 4.8rem;
+  }
+
+  .swiperIndex1 {
+    .swiper-slide {
+      position: relative;
+
+      .img_holder {
+        position: relative;
+
+        &::before {
+          content: '';
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          z-index: 2;
+          display: block;
+          background-image: url(../img/swiper1i-shadow.png);
+          background-size: cover;
+          top: 0;
+          left: 0;
+        }
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        position: relative;
+      }
+
+      h3 {
+        font-size: 2.2rem;
+        line-height: 2.6rem;
+        color: #fff;
+        text-align: center;
+        transform: translateY(-200%);
+        z-index: 3;
+        position: relative;
+        .mobile({
+          transform: translateY(0);
+          color: @bg;
+          padding: 1rem;
+        });
+      }
+    }
+
+    .swiper-pagination-i1 {
+      margin-top: 0rem;
+      position: relative;
+      .mobile({
+        margin-top: 3rem;
+      });
+
+      .swiper-pagination-bullet {
+        background-color: #C4C4C4;
+      }
+
+      .swiper-pagination-bullet-active {
+        background-color: #9B9B9B;
+      }
+    }
+
+    .swiper-button-next-i1, .swiper-button-prev-i1 {
+      color: @bg;
+      .mobile({
+        top: 25%;
+      });
+    }
+  }
+}
+
+.index-how {
+  max-width: @midWidht;
+  margin: 0 auto;
+  padding-top: 10.9rem;
+  padding-bottom: 10.9rem;
+  .mobile-sized(935px, {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    .mobile-padding();
+  });
+
+  h2 {
+    font-weight: 700;
+    font-size: 4.2rem;
+    line-height: 6.4rem;
+    text-align: center;
+    padding-bottom: 4rem;
+    .mobile({
+      padding-bottom: 1rem;
+    });
+  }
+
+  .how_holder {
+    display: flex;
+    justify-content: space-around;
+    .mobile({
+      flex-wrap: wrap;
+    });
+
+    .how_item {
+      width: 100%;
+      max-width: 25.5rem;
+
+      &:nth-child(2) {
+        .num_text {
+          color: #84F2D6;
+
+          .num {
+            color: rgba(#84F2D6, .25);
+          }
+        }
+      }
+
+      .num_text {
+        max-width: 3.3rem;
+        margin: 1.6rem auto;
+
+        .num {
+          font-family: 'Manrope', sans-serif;
+          font-weight: 800;
+          font-size: 7.2rem;
+          line-height: 9.8rem;
+          color: #F4F5F7;
+        }
+
+        .text {
+          font-family: 'Manrope', sans-serif;
+          font-weight: 500;
+          font-size: 1.8rem;
+          line-height: 2.8rem;
+          transform: translateY(-150%);
+          margin-bottom: -150%;
+        }
+      }
+
+      .desc {
+        margin: 0 auto;
+        max-width: 20.7rem;
+        text-align: center;
+        color: rgba(#151439, .4);
+        font-size: 1.6rem;
+        line-height: 2.4rem;
+      }
+    }
+  }
+}
+
+.index-in-vr {
+  max-width: @midWidht;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  .mobile-sized(1181px, {
+    .mobile-padding();
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+  });
+
+  .item {
+    &:nth-child(1) {
+      max-width: 66.2rem;
+
+      img {
+        display: block;
+        margin-bottom: 2rem;
+        margin-right: auto;
+        margin-left: auto;
+        .mobile-sized(1181px, {
+          width: 100%;
+          height: auto;
+        })
+      }
+    }
+
+    &:nth-child(2) {
+      max-width: 44.4rem;
+
+      h2 {
+        color: #3E467F;
+        font-weight: bold;
+        font-size: 4rem;
+        line-height: 5.4rem;
+        padding-bottom: 1.6rem;
+      }
+
+      .about {
+        color: rgba(#151439, .4);
+        padding-bottom: 4rem;
+        font-family: 'Manrope', sans-serif;
+        font-size: 1.8rem;
+        line-height: 3.2rem;
+      }
+
+      .table {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: center;
+
+        .cell {
+          margin-bottom: 2.4rem;
+
+          &:nth-child(1) {
+            width: 5.6rem;
+          }
+
+          &:nth-child(2) {
+            max-width: 30rem;
+          }
+        }
+
+        strong {
+          font-family: 'Manrope', sans-serif;
+          font-size: 2rem;
+          line-height: 3rem;
+          color: #3E467F;
+        }
+
+        span {
+          font-family: 'Manrope', sans-serif;
+          font-weight: 400;
+          font-size: 1.6rem;
+          line-height: 2.6rem;
+          color: rgba(#151439, .4);
+        }
+      }
+
+      .btn-more {
+        display: inline-block;
+        padding: 1.2rem 3.6rem;
+        background-color: @orange;
+        color: #fff;
+        font-weight: 500;
+        font-size: 1.8rem;
+        line-height: 2.6rem;
+        text-decoration: none;
+        border-radius: 2rem;
+        margin-top: 5.2rem;
+        .mobile({
+          margin-top: 2rem;
+          margin-bottom: 2rem;
+        });
+      }
+    }
+  }
+}
+
+.pre-foot {
+  max-width: @max-container;
+  margin: 8.5rem auto 0;
+  background-color: rgba(@bg, 1);
+  position: relative;
+
+  .content {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: url(../img/pre-foot-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    .mobile({
+      .mobile-padding();
+    });
+
+    .text {
+      color: #fff;
+      text-align: center;
+
+      .logo {
+        padding-top: 8.2rem;
+        padding-bottom: 2.5rem;
+        width: 8.5rem;
+        height: 4.1rem;
+        display: block;
+        margin: 0 auto;
+        box-sizing: content-box;
+      }
+
+      .sublogo {
+        font-weight: 500;
+        font-size: 2.2rem;
+        line-height: 3.2rem;
+        margin-bottom: 11.2rem;
+      }
+
+      small {
+        display: block;
+        font-weight: 700;
+        font-size: 1.4rem;
+        line-height: 2.6rem;
+        margin-bottom: 1.6rem;
+      }
+
+      .bigger {
+        font-weight: 700;
+        font-size: 4.2rem;
+        line-height: 5.2rem;
+        margin-bottom: 7rem;
+        display: inline-block;
+        color: #fff;
+        text-decoration: none;
+        .mobile({
+          font-size: 3rem;
+          line-height: 150%;
+          margin-bottom: 3.5rem;
+        })
+      }
+
+      .soc-holder {
+        padding-bottom: 10rem;
+
+        a {
+          color: #fff;
+          font-size: 3rem;
+          display: inline-block;
+          margin-right: 3rem;
+
+          &:nth-last-child(1) {
+            margin-right: 0;
+          }
+        }
+      }
+    }
+  }
+}
+
+//course page
+
+.course-screen1 {
+  background-color: @azure;
+
+  .content {
+    max-width: @midWidht;
+    margin: 0 auto;
+    background-image: url(../img/jonny.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+    padding-top: 19.5rem;
+    padding-bottom: 16.8rem;
+
+    h1, p, a {
+      max-width: 67rem;
+      color: @bk;
+    }
+
+    h1 {
+      font-size: 9.6rem;
+      line-height: 9.8rem;
+      font-weight: bold;
+      padding-bottom: 2rem;
+    }
+
+    p {
+      font-size: 2.4rem;
+      line-height: 3.2rem;
+      padding-bottom: 6.7rem;
+    }
+
+    a {
+      display: inline-block;
+      padding: 1.7rem 4.5rem;
+      background-color: @orange;
+      border-radius: 3rem;
+      text-decoration: none;
+      color: #fff;
+      font-size: 2rem;
+      line-height: 2.6rem;
+      font-weight: 500;
+    }
+  }
+}
+
+.course-program {
+  padding-top: 6.4rem;
+  padding-bottom: 10.9rem;
+
+  h2 {
+    text-align: center;
+    padding-bottom: 4.8rem;
+    font-size: 4.8rem;
+    line-height: 6.4rem;
+    font-weight: 700;
+  }
+
+  .holder {
+    display: flex;
+    justify-content: space-between;
+    max-width: @midWidht;
+    margin: 0 auto;
+
+    .item {
+      &:nth-child(1) {
+        max-width: 57.2rem;
+
+        img {
+          display: block;
+          width: 100%;
+          height: auto;
+        }
+      }
+
+      &:nth-child(2) {
+        max-width: 44.4rem;
+        dt {
+          padding-left: 2rem;
+          font-weight: bold;
+          font-size: 2.4rem;
+          line-height: 3.2rem;
+          padding-bottom: 1rem;
+          color: @bk;
+          text-transform: uppercase;
+          position: relative;
+          &:before {
+            content: '';
+            position: absolute;
+            left: 0rem;
+            width: .6rem;
+            height: .6rem;
+            top: 1.1rem;
+            background-color: #C1E5C0;
+            display: block;
+            border-radius: 50%;
+          }
+          &:nth-child(1) {
+            &:before {
+              background-color: #A0DCFF;
+            }
+          }
+          &:nth-child(3) {
+            &:before {
+              content: '';
+              background-color: #FFC3D8;
+            }
+          }
+        }
+        dd {
+            color: rgba(#151439, .4);
+          font-size: 1.8rem;
+          line-height: 3.2rem;
+          &:not(:last-child) {
+            margin-bottom: 4rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+//offer form
+.offer-form {
+  display: none;
+
+  &:target {
+    display: block;
+  }
+
+  background-color: @bg;
+  padding-top: 11.9rem;
+  padding-bottom: 11.9rem;
+
+  .content {
+    max-width: @midWidht;
+    margin: 0 auto;
+    .mobile-sized(1181px, {
+      .mobile-padding();
+    });
+
+    h2 {
+      color: #fff;
+      font-size: 1.8rem;
+      line-height: 2.3rem;
+      font-weight: 700;
+      padding-bottom: 3rem;
+      text-transform: uppercase;
+    }
+
+    .form {
+      .inp-group {
+        display: flex;
+        justify-content: space-between;
+        .mobile({
+          flex-direction: column;
+        });
+
+        input {
+          width: 100%;
+          max-width: 35.9rem;
+          background-color: #e8e8e8;
+          color: #000;
+          padding: 2.7rem 3.2rem;
+          font-size: 1.6rem;
+          line-height: 2rem;
+          font-weight: 400;
+
+          &::placeholder {
+            color: #BDBDBD;
+          }
+
+          .mobile({
+            max-width: 100%;
+            margin-bottom: 2rem;
+          })
+        }
+      }
+
+      textarea {
+        width: 100%;
+        resize: none;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+        min-height: 19.3rem;
+        background-color: #e8e8e8;
+        color: #000;
+        padding: 2.7rem 3.2rem;
+        font-size: 1.6rem;
+        line-height: 2rem;
+        font-weight: 400;
+
+        &::placeholder {
+          color: #BDBDBD;
+        }
+
+        .mobile({
+          margin-top: 0;
+        });
+      }
+
+      .submit-group {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        input {
+          background-color: @orange;
+          color: #fff;
+          min-width: 20.6rem;
+          padding: 1.7rem 7.8rem;
+          border-radius: 3rem;
+          border: transparent;
+          outline: none;
+          cursor: pointer;
+          font-size: 2rem;
+          line-height: 2.6rem;
+          font-weight: 500;
+        }
+
+        p {
+          color: #E0E0E0;
+          font-size: 1.6rem;
+          line-height: 2.1rem;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
 
 //footer
 footer {
   background-color: @bg;
   padding-top: 4.4rem;
   padding-bottom: 4.4rem;
+
   .content {
     max-width: @midWidht;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .mobile-sized(1181px, {
+      .mobile-padding();
+    });
+    .mobile({
+      flex-direction: column;
+    });
+
     ul {
       list-style: none;
       justify-content: space-between;
       display: flex;
       width: 48.7rem;
+
       a {
         color: #fff;
         text-decoration: none;
@@ -239,11 +952,34 @@ footer {
         font-weight: 600;
         line-height: 2.6rem;
       }
+
+      .mobile({
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+      });
     }
-  .icons {
-    display: flex;
-    justify-content: space-between;
-    width: 18.2rem;
-  }
+
+    .icons {
+      display: flex;
+      justify-content: space-between;
+      width: 18.2rem;
+
+      .youtube {
+        width: 4.2rem;
+        height: 4.2rem;
+        font-size: 2.5rem;
+        color: #fff;
+        border-radius: 50%;
+        border: .1rem solid rgba(#fff, .3);
+        padding: .2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+      }
+    }
   }
 }
